0024209: Cppcheck errors "unusedScopedObject" Fixed bug with temporary objects.