src/Extrema/Extrema_GenExtCS.cxx
@@ -302,7 +302,7 @@ void Extrema_GenExtCS::Perform(const Adaptor3d_Curve& C,
         UV(1) = aMaxCU;
         UV(2) = aMaxSU;
         UV(3) = aMaxSV;
-        math_FunctionSetRoot(myF, UV, Tol, UVinf, UVsup);
+        math_FunctionSetRoot aFunc(myF, UV, Tol, UVinf, UVsup);
         break;
       }
       //
