src/QABugs/QABugs_19.cxx
@@ -118,10 +118,10 @@ static Standard_Integer OCC23237 (Draw_Interpretor& di, Standard_Integer /*argc*
     aPM.Start();
     aTM.Start();
 
-    // do some operation that will take considerable time compared with time or starting / stopping timers
+    // do some operation that will take considerable time compared with time of starting / stopping timers
     BRepPrimAPI_MakeBox aBox (10., 10., 10.);
     BRepPrimAPI_MakeSphere aSphere (10.);
-    BRepAlgo_Cut (aBox.Shape(), aSphere.Shape());
+    BRepAlgo_Cut aCutter (aBox.Shape(), aSphere.Shape());
 
     aTM.Stop();
     aPM.Stop();
